--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "Money Bank Server",
   "main": "server.js",
   "scripts": {
+    "build": "echo \"No build specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
+    "start": "node server.js",
     "dev": "nodemon server"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tristan Maber",
   "license": "ISC",
   "dependencies": {
     "@supabase/ssr": "^0.0.10",
