--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "Money Bank Server",
   "main": "server.js",
   "scripts": {
-    "build": "echo \"No build specified\" && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Tristan Maber",
