--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Money Bank Server",
   "main": "server.js",
   "scripts": {
+    "build": "node server.js",
     "start": "node server.js",
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
