--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "Money Bank Server",
   "main": "server.js",
   "scripts": {
-    "build": "cyclic server.js",
-    "start": "node server.js",
+    "start": "cyclic server.js",
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
