--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server",
+    "build": "echo 'No build steps required'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
