--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "g": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
