--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "@babel/plugin-proposal-private-property-in-object"
   }
 }
