--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5",
-    "@babel/plugin-proposal-private-property-in-object"
+    "typescript": "4.9.5"
   }
 }
