--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "money-bank",
   "version": "0.1.0",
-  "proxy": "http://localhost:5001/",
+  "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
